[package]
name = "vss-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.15", features = ["full"] }
axum = { version = "0.6.20", features = ["macros"] }
aws-sdk-dynamodb = "0.35.0"
aws-config = "0.57.1"
bytes = "1"
prost = "0.11.6"
#hyper = "0.14.27"
#twilight-http-ratelimiting = "0.15.3"
#tower = "0.4.13"
#tower-http = "0.4.4"
#base64 = "0.21.5"

[build-dependencies]
prost-build = { version = "0.11.3" }
reqwest =  { version = "0.11.13", features = ["blocking"] }

[features]
genproto = []